# sicprod-datamodel

./: Dockerfile  LICENSE  class.xml  index.docx  index.html  model.xml  models.py  pyproject.toml  readme.md  rebuild.sh  test_model2.py  test_model_creation.ipynb
.github/workflows/: convert.yml  pages.yml  triggerpr.yml  xmllint.yml
django_orm_templates/: entity.txt  models.txt  prop_charfield.txt  prop_choicefield.txt  prop_floatfield.txt  prop_integerfield.txt  prop_textfield.txt  rel_property.txt
methods/: person.py
